--- a/index.html
+++ b/index.html
@@ -115,13 +115,9 @@
              <li><a href="https://github.com/kashyapkumar-pdf">Kashyap Kumar</a></li>
              <li><a href="https://github.com/guptaushma">Ushma Gupta</a></li>
              <li><a href="https://github.com/ashwithpoojary98">Ashwith</a></li>
-
-
-
-
 <li><a href="https://github.com/p">p Sharma</a></li>
             <li><a href="https://github.com/fatimareefat">FATIMA REEFAT</a></li>
-
+            <li><a href="https://github.com/samuelburns">Sam Burns</a></li>
          </ol>
       </div>
       </div>
